some more analysis of pcb data home default

--- a/in_progress/home_default/5_merge_bureau_bal-Copy1.ipynb
+++ b/in_progress/home_default/5_merge_bureau_bal-Copy1.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Small improvement over before!\n",
+    "\n",
     "<a id=\"toc\"></a>\n",
     "\n",
     "# Table of Contents\n",
@@ -996,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1105,9 +1107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 76 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "log_model = LogisticRegression()\n",
     "\n",
@@ -1125,9 +1135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.28573124  0.2826771 ]\n",
+      "\n",
+      "0.284204172243\n",
+      "\n",
+      "Scoring took 115 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "rmsle_cv(log_model)\n",
@@ -1167,9 +1189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 93 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "las_model = Lasso(random_state=17)\n",
     "\n",
@@ -1187,9 +1217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.27082038  0.26825154]\n",
+      "\n",
+      "0.269535959388\n",
+      "\n",
+      "Scoring took 76 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "rmsle_cv(las_model)\n",
@@ -1227,9 +1269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 6 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "rid_model = Ridge(random_state=17)\n",
     "\n",
@@ -1247,9 +1297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.26399949  0.2616963 ]\n",
+      "\n",
+      "0.262847894361\n",
+      "\n",
+      "Scoring took 6 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "rmsle_cv(rid_model)\n",
@@ -1262,16 +1324,24 @@
    "source": [
     "## XGB Regressor\n",
     "\n",
-    "(Training takes 544 seconds)\n",
+    "(Training takes 544, 533 seconds)\n",
     "\n",
-    "(Scoring takes 453 seconds)"
+    "(Scoring takes 453, 487 seconds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 553 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "xgb_model = XGBRegressor()\n",
     "\n",
@@ -1289,9 +1359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.26217886  0.2599844 ]\n",
+      "\n",
+      "0.261081632436\n",
+      "\n",
+      "Scoring took 487 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "rmsle_cv(xgb_model)\n",
@@ -1307,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1331,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1349,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1440,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -1388,7 +1470,7 @@
     "pd.DataFrame({\n",
     "    \"SK_ID_CURR\": test_id,\n",
     "    \"TARGET\": final_pred\n",
-    "}).to_csv(\"../../submissions/stacked.csv\", index=False)"
+    "}).to_csv(\"../../submissions/stacked_merge_bur_bal.csv\", index=False)"
    ]
   },
   {
