done treating pos cash in home default

--- a/in_progress/home_default/6_.ipynb
+++ b/in_progress/home_default/6_.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drop old columns and prep for merge"
+    "### Merge bureau and bureau_balance"
    ]
   },
   {
@@ -276,299 +276,17 @@
     "# prep for merge\n",
     "bureau_balance = bureau_balance.groupby(\"SK_ID_BUREAU\").sum()\n",
     "\n",
-    "bureau_balance.head()"
+    "# Merge\n",
+    "bureau = bureau.merge(right=bureau_balance.reset_index(), how='left', on='SK_ID_BUREAU')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SK_ID_CURR</th>\n",
-       "      <th>SK_ID_BUREAU</th>\n",
-       "      <th>CREDIT_ACTIVE</th>\n",
-       "      <th>CREDIT_CURRENCY</th>\n",
-       "      <th>DAYS_CREDIT</th>\n",
-       "      <th>CREDIT_DAY_OVERDUE</th>\n",
-       "      <th>DAYS_CREDIT_ENDDATE</th>\n",
-       "      <th>DAYS_ENDDATE_FACT</th>\n",
-       "      <th>AMT_CREDIT_MAX_OVERDUE</th>\n",
-       "      <th>CNT_CREDIT_PROLONG</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DAYS_CREDIT_UPDATE</th>\n",
-       "      <th>AMT_ANNUITY</th>\n",
-       "      <th>STATUS_0</th>\n",
-       "      <th>STATUS_1</th>\n",
-       "      <th>STATUS_2</th>\n",
-       "      <th>STATUS_3</th>\n",
-       "      <th>STATUS_4</th>\n",
-       "      <th>STATUS_5</th>\n",
-       "      <th>STATUS_C</th>\n",
-       "      <th>STATUS_X</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>215354</td>\n",
-       "      <td>5714462</td>\n",
-       "      <td>Closed</td>\n",
-       "      <td>currency 1</td>\n",
-       "      <td>-497</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-153.0</td>\n",
-       "      <td>-153.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-131</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>215354</td>\n",
-       "      <td>5714463</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>currency 1</td>\n",
-       "      <td>-208</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1075.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>215354</td>\n",
-       "      <td>5714464</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>currency 1</td>\n",
-       "      <td>-203</td>\n",
-       "      <td>0</td>\n",
-       "      <td>528.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>215354</td>\n",
-       "      <td>5714465</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>currency 1</td>\n",
-       "      <td>-203</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>215354</td>\n",
-       "      <td>5714466</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>currency 1</td>\n",
-       "      <td>-629</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1197.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>77674.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SK_ID_CURR  SK_ID_BUREAU CREDIT_ACTIVE CREDIT_CURRENCY  DAYS_CREDIT  \\\n",
-       "0      215354       5714462        Closed      currency 1         -497   \n",
-       "1      215354       5714463        Active      currency 1         -208   \n",
-       "2      215354       5714464        Active      currency 1         -203   \n",
-       "3      215354       5714465        Active      currency 1         -203   \n",
-       "4      215354       5714466        Active      currency 1         -629   \n",
-       "\n",
-       "   CREDIT_DAY_OVERDUE  DAYS_CREDIT_ENDDATE  DAYS_ENDDATE_FACT  \\\n",
-       "0                   0               -153.0             -153.0   \n",
-       "1                   0               1075.0                NaN   \n",
-       "2                   0                528.0                NaN   \n",
-       "3                   0                  NaN                NaN   \n",
-       "4                   0               1197.0                NaN   \n",
-       "\n",
-       "   AMT_CREDIT_MAX_OVERDUE  CNT_CREDIT_PROLONG    ...     DAYS_CREDIT_UPDATE  \\\n",
-       "0                     NaN                   0    ...                   -131   \n",
-       "1                     NaN                   0    ...                    -20   \n",
-       "2                     NaN                   0    ...                    -16   \n",
-       "3                     NaN                   0    ...                    -16   \n",
-       "4                 77674.5                   0    ...                    -21   \n",
-       "\n",
-       "   AMT_ANNUITY  STATUS_0  STATUS_1 STATUS_2  STATUS_3  STATUS_4  STATUS_5  \\\n",
-       "0          NaN       NaN       NaN      NaN       NaN       NaN       NaN   \n",
-       "1          NaN       NaN       NaN      NaN       NaN       NaN       NaN   \n",
-       "2          NaN       NaN       NaN      NaN       NaN       NaN       NaN   \n",
-       "3          NaN       NaN       NaN      NaN       NaN       NaN       NaN   \n",
-       "4          NaN       NaN       NaN      NaN       NaN       NaN       NaN   \n",
-       "\n",
-       "   STATUS_C  STATUS_X  \n",
-       "0       NaN       NaN  \n",
-       "1       NaN       NaN  \n",
-       "2       NaN       NaN  \n",
-       "3       NaN       NaN  \n",
-       "4       NaN       NaN  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bureau = bureau.merge(right=bureau_balance.reset_index(), how='left', on='SK_ID_BUREAU')\n",
-    "bureau.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Seems like a lot of NaN values, what's it really like?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SK_ID_CURR                      0\n",
-       "SK_ID_BUREAU                    0\n",
-       "CREDIT_ACTIVE                   0\n",
-       "CREDIT_CURRENCY                 0\n",
-       "DAYS_CREDIT                     0\n",
-       "CREDIT_DAY_OVERDUE              0\n",
-       "DAYS_CREDIT_ENDDATE        105553\n",
-       "DAYS_ENDDATE_FACT          633653\n",
-       "AMT_CREDIT_MAX_OVERDUE    1124488\n",
-       "CNT_CREDIT_PROLONG              0\n",
-       "AMT_CREDIT_SUM                 13\n",
-       "AMT_CREDIT_SUM_DEBT        257669\n",
-       "AMT_CREDIT_SUM_LIMIT       591780\n",
-       "AMT_CREDIT_SUM_OVERDUE          0\n",
-       "CREDIT_TYPE                     0\n",
-       "DAYS_CREDIT_UPDATE              0\n",
-       "AMT_ANNUITY               1226791\n",
-       "STATUS_0                   942074\n",
-       "STATUS_1                   942074\n",
-       "STATUS_2                   942074\n",
-       "STATUS_3                   942074\n",
-       "STATUS_4                   942074\n",
-       "STATUS_5                   942074\n",
-       "STATUS_C                   942074\n",
-       "STATUS_X                   942074\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bureau.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### I suppose we shouldn't worry too much?\n",
+    "### Fill in new missing values with -1\n",
     "\n",
-    "There won't be any effect if we replace NaN with 0"
+    "There won't be any effect if we replace NaN with -1"
    ]
   },
   {
@@ -615,9 +333,7 @@
    "source": [
     "bureau[[\"STATUS_0\", \"STATUS_1\", \"STATUS_2\", \"STATUS_3\", \"STATUS_4\", \"STATUS_5\", \"STATUS_C\", \"STATUS_X\"]] = (\n",
     "    bureau[[\"STATUS_0\", \"STATUS_1\", \"STATUS_2\", \"STATUS_3\", \"STATUS_4\", \"STATUS_5\", \"STATUS_C\", \"STATUS_X\"]]\n",
-    "        .fillna(-1))\n",
-    "\n",
-    "bureau.isnull().sum()"
+    "        .fillna(-1))"
    ]
   },
   {
