updated toc for analysis

--- a/in_progress/home_default/analysis.ipynb
+++ b/in_progress/home_default/analysis.ipynb
@@ -42,8 +42,12 @@
     "&nbsp;&nbsp;&nbsp;&nbsp; 5.12.) [Moderate missing values](#prev_num_nan_mod)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 5.13.) [Severe missing values](#prev_num_nan_severe)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 5.14.) [Numeric plots](#prev_num_plots)  \n",
-    "\n",
     "6.) [POS CASH](#pos_cash)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 6.1.) [Missing values](#pos_nan)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 6.2.) [MONTHS_BALANCE](#pos_months_bal)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 6.3.) [CNT_INSTALMENT and CNT_INSTALMENT_FUTURE](#pos_cnt)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 6.4.) [NAME_CONTRACT_STATUS](#pos_name_contact_stat)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 6.5.) [SK_DPD and SK_DPD_DEF](#pos_sk_dpd)  \n",
     "7.) [Credit Card Balance](#credit_card)  \n",
     "8.) [Installments Payments](#install_payments)  "
    ]
@@ -2441,13 +2445,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Missing values"
+    "<a id=\"pos_nan\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Missing values</u>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "total = pcb.isnull().sum()\n",
@@ -2557,7 +2565,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [^](#toc) MONTHS_BALANCE\n",
+    "<a id=\"pos_months_bal\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>MONTHS_BALANCE</u>\n",
     "\n",
     "\"Month of balance relative to application date (-1 means the information to the freshest monthly snapshot, 0 means the information at application - often it will be the same as -1 as many banks are not updating the information to Credit Bureau regularly )\",time only relative to the application\""
    ]
@@ -2592,7 +2602,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNT_INSTALMENT and CNT_INSTALMENT_FUTURE\n",
+    "<a id=\"pos_cnt\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>CNT_INSTALMENT and CNT_INSTALMENT_FUTURE</u>\n",
     "\n",
     "CNT_INSTALMENT - \"Term of previous credit (can change over time)\"\n",
     "\n",
@@ -2651,6 +2663,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"pos_name_contact_stat\"></a>\n",
+    "\n",
     "### [^](#toc) <u>NAME_CONTRACT_STATUS</u>\n",
     "\n",
     "\"Contract status during the month\""
@@ -2727,7 +2741,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SK_DPD and SK_DPD_DEF\n",
+    "<a id=\"pos_sk_dpd\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>SK_DPD and SK_DPD_DEF</u>\n",
     "\n",
     "SK_DPD - \"DPD (days past due) during the month of previous credit\"\n",
     "\n",
