partial analysis into credit cards

--- a/in_progress/home_default/analysis.ipynb
+++ b/in_progress/home_default/analysis.ipynb
@@ -52,11 +52,11 @@
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.1.) [Missing values](#install_nan)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.2.) [NaN values - closer look](#install_nan_closer)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.3.) [Remaining columns](#install_remain)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.2.) [](#)  \n",
-    "\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.2.) [](#)  \n",
     "8.) [Credit Card Balance](#credit_card)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 8.1.) [Missing Values](#credit_nan)  "
+    "&nbsp;&nbsp;&nbsp;&nbsp; 8.1.) [Missing Values](#credit_nan)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 8.2.) [Categorical column(s)](#credit_cat_col)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 8.3.) [NAME_CONTRACT_STATUS](#credit_name_contact_stat)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 8.4.) [Numeric column](#credit_num_cols)  "
    ]
   },
   {
@@ -3131,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3222,7 +3222,7 @@
        "CNT_INSTALMENT_MATURE_CUM          0.079482         305236"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3237,6 +3237,255 @@
     "}, index=total.index)\n",
     "temp[temp[\"Total Missing\"] != 0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"credit_cat_col\"></a>\n",
+    "\n",
+    "###  [^](#toc) <u>Categorical column(s)</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NAME_CONTRACT_STATUS']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols = [col for col in credit_card if credit_card[col].dtype==object]\n",
+    "cat_cols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"credit_name_contact_stat\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>NAME_CONTRACT_STATUS</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Active           3698436\n",
+       "Completed         128918\n",
+       "Signed             11058\n",
+       "Demand              1365\n",
+       "Sent proposal        513\n",
+       "Name: NAME_CONTRACT_STATUS, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_card.NAME_CONTRACT_STATUS.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Treatment\n",
+    "\n",
+    "No missing values, but refused and approved barely have any entries.\n",
+    "\n",
+    "I'll just delete the rows containing them.\n",
+    "\n",
+    "NOTES: I can merge the two into one misc col, but it still won't have a lot of counts.  Also based on the labels they seem to be opposites. I guess I can factorize this and have these two on opposite spectrums, but I'm not sure how to factorize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gets indices with outlier values\n",
+    "temp = credit_card[credit_card.NAME_CONTRACT_STATUS.isin([\"Refused\", \"Approved\"])].index\n",
+    "\n",
+    "# Drops outlier values\n",
+    "credit_card = credit_card.drop(temp, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"credit_num_cols\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Numeric column</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Percent Missing</th>\n",
+       "      <th>Total Missing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SK_ID_PREV</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK_ID_CURR</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MONTHS_BALANCE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_BALANCE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_CREDIT_LIMIT_ACTUAL</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_DRAWINGS_CURRENT</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_PAYMENT_TOTAL_CURRENT</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_RECEIVABLE_PRINCIPAL</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_RECIVABLE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMT_TOTAL_RECEIVABLE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CNT_DRAWINGS_CURRENT</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NAME_CONTRACT_STATUS</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK_DPD</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK_DPD_DEF</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Percent Missing  Total Missing\n",
+       "SK_ID_PREV                             0.0              0\n",
+       "SK_ID_CURR                             0.0              0\n",
+       "MONTHS_BALANCE                         0.0              0\n",
+       "AMT_BALANCE                            0.0              0\n",
+       "AMT_CREDIT_LIMIT_ACTUAL                0.0              0\n",
+       "AMT_DRAWINGS_CURRENT                   0.0              0\n",
+       "AMT_PAYMENT_TOTAL_CURRENT              0.0              0\n",
+       "AMT_RECEIVABLE_PRINCIPAL               0.0              0\n",
+       "AMT_RECIVABLE                          0.0              0\n",
+       "AMT_TOTAL_RECEIVABLE                   0.0              0\n",
+       "CNT_DRAWINGS_CURRENT                   0.0              0\n",
+       "NAME_CONTRACT_STATUS                   0.0              0\n",
+       "SK_DPD                                 0.0              0\n",
+       "SK_DPD_DEF                             0.0              0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp[temp[\"Total Missing\"] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
