added todo list for home default

--- a/in_progress/home_default/6_.ipynb
+++ b/in_progress/home_default/6_.ipynb
@@ -8,10 +8,29 @@
     "\n",
     "<a id=\"toc\"></a>\n",
     "\n",
-    "# Table of Contents\n",
-    "1.) [Imports](#imports)  \n",
-    "2.) [Load data](#load)  \n",
-    "3.) [Merge Bureau and Bureau_balance](#merge_bureau)  "
+    "# <u>Table of Contents</u>\n",
+    "1.) [TODO](#todo)  \n",
+    "2.) [Imports](#imports)  \n",
+    "3.) [Load data](#load)  \n",
+    "4.) [Merge Bureau and Bureau_balance](#merge_bureau)  \n",
+    "5.) [Modeling](#models)  \n",
+    "6.) [Save file to CSV](#save)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"todo\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>TODO</u>\n",
+    "\n",
+    "- Fix skew on columns\n",
+    "- Tinker with the best way to replace missing values (dropping cols?)\n",
+    "- Look for outliers\n",
+    "- Merge db together\n",
+    "- Tune model parameters\n",
+    "- Address [this](https://www.kaggle.com/c/home-credit-default-risk/discussion/57248)"
    ]
   },
   {
@@ -20,7 +39,7 @@
    "source": [
     "<a id=\"imports\"></a>\n",
     "\n",
-    "# Imports"
+    "# [^](#toc) <u>Imports</u>"
    ]
   },
   {
@@ -50,7 +69,7 @@
    "source": [
     "<a id=\"load\"></a>\n",
     "\n",
-    "# Load data"
+    "# [^](#toc) <u>Load data</u>"
    ]
   },
   {
@@ -106,7 +125,7 @@
    "source": [
     "<a id=\"merge_bureau\"></a>\n",
     "\n",
-    "# Merge bureau and bureau_balance"
+    "# [^](#toc) <u>Merge bureau and bureau_balance</u>"
    ]
   },
   {
@@ -567,6 +586,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"models\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>Models </u>\n",
+    "\n",
     "### Model imports"
    ]
   },
@@ -1172,7 +1195,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save file to CSV"
+    "<a id=\"save\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>Save file to CSV</u>"
    ]
   },
   {
