removing months balance from inspection

--- a/in_progress/home_default/6_.ipynb
+++ b/in_progress/home_default/6_.ipynb
@@ -4,17 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Small improvement over before!\n",
-    "\n",
     "<a id=\"toc\"></a>\n",
     "\n",
     "# <u>Table of Contents</u>\n",
     "1.) [TODO](#todo)  \n",
     "2.) [Imports](#imports)  \n",
     "3.) [Load data](#load)  \n",
-    "4.) [Merge Bureau and Bureau_balance](#merge_bureau)  \n",
-    "5.) [Modeling](#models)  \n",
-    "6.) [Save file to CSV](#save)  "
+    "4.) [Bureau Balance](#bureau_bal)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 4.1.) [Merge into Bureau](#merge_bureau_bal)  \n",
+    "5.) [POS CASH balance](#pos_cash)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 5.1.) [Merge into Previous Application](#merge_pos_cash)  \n",
+    "6.) [Installment Payments](#install_pay)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 6.1.) [Merge into Previous Application](#merge_install_pay)  \n",
+    "7.) [Credit Card Balance](#credit)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.1.) [Merge into Previous Application](#merge_credit)  \n",
+    "8.) [Modeling](#models)  \n",
+    "9.) [Save file to CSV](#save)  "
    ]
   },
   {
@@ -123,9 +128,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"merge_bureau\"></a>\n",
+    "<a id=\"bureau_bal\"></a>\n",
     "\n",
-    "# [^](#toc) <u>Merge bureau and bureau_balance</u>"
+    "# [^](#toc) <u>Bureau Balance</u>"
    ]
   },
   {
@@ -156,7 +161,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge bureau and bureau_balance"
+    "<a id=\"merge_bureau_bal\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Merge into Bureau</u>"
    ]
   },
   {
@@ -354,6 +361,194 @@
     "    bureau[[\"STATUS_0\", \"STATUS_1\", \"STATUS_2\", \"STATUS_3\", \"STATUS_4\", \"STATUS_5\", \"STATUS_C\", \"STATUS_X\"]]\n",
     "        .fillna(-1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"pos_cash\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>POS CASH balance</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pcb = pd.read_csv(DATA_PATH + \"POS_CASH_balance.csv\")\n",
+    "print(\"Shape of pcb:\",  pcb.shape)\n",
+    "\n",
+    "print(\"\\n{}Columns of pcb:{}\".format(color.UNDERLINE, color.END))\n",
+    "print(\" --- \".join(pcb.columns.values))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in (\"CNT_INSTALMENT\", \"CNT_INSTALMENT_FUTURE\"):\n",
+    "    pcb[col] = pcb[col].transform(lambda x: x.fillna(x.median()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pcb = pcb.drop(pcb[pcb.NAME_CONTRACT_STATUS.isin([\"XNA\", \"Canceled\"])].index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Dummies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pcb = pcb[[\"SK_ID_PREV\", \"NAME_CONTRACT_STATUS\"]]\n",
+    "\n",
+    "# function to create dummy variables of categorical features\n",
+    "def get_dummies(df, cats):\n",
+    "    for col in cats:\n",
+    "        df = pd.concat([df, pd.get_dummies(df[col], prefix=col)], axis=1)\n",
+    "    return df \n",
+    "\n",
+    "pcb = get_dummies(pcb, [\"NAME_CONTRACT_STATUS\"])\n",
+    "pcb = pcb.drop(\"NAME_CONTRACT_STATUS\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"merge_pos_cash\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Merge into Previous Application</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Keep track of merged columns\n",
+    "merged_cols = set(pcb.columns)\n",
+    "merged_cols.remove(\"SK_ID_PREV\")\n",
+    "\n",
+    "# prep for merge\n",
+    "temp = pcb.groupby(\"SK_ID_PREV\").sum()\n",
+    "\n",
+    "# Merge\n",
+    "prev_app = prev_app.merge(right=temp.reset_index(), how='left', on='SK_ID_PREV')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"install_pay\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>Installment Payments</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"merge_install_pay\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Merge into Previous Application</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"credit\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>Credit Card Balance</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"merge_credit\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Merge into Previous Application</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
